dev:change: Removed logos

--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -123,4 +123,4 @@ block content
 					option(value="Tonik Energy") Tonik Energy
 					option(value="Utilita") Utilita
 			button.btn.right-button-icon Begin a complaint
-			img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
+			//img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
