--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -12,7 +12,32 @@ block head
 
 block script
 	script.
+		var filename = window.location.search.slice(1);;
 		$(document).ready(function() {
+			if (filename == "0") {
+				$('#pqf').attr("href", "http://1")
+			} else if (filename == "1") {
+				$('#pqf').attr("href", "http://2")
+			} else if (filename == "2") {
+				$('#pqf').attr("href", "http://3")
+			} else if (filename == "3") {
+				$('#pqf').attr("href", "http://4")
+			} else if (filename == "4") {
+				$('#pqf').attr("href", "http://5")
+			} else if (filename == "5") {
+				$('#pqf').attr("href", "http://6")
+			} else if (filename == "6") {
+				$('#pqf').attr("href", "http://7")
+			} else if (filename == "7") {
+				$('#pqf').attr("href", "http://8")
+			} else if (filename == "8") {
+				$('#pqf').attr("href", "http://9")
+			} else if (filename == "9") {
+				$('#pqf').attr("href", "http://10")
+			} else {
+				$('#pqf').attr("href", "http://1")
+			}
+
 			$('#webchat').click(function(){
 				$('#overlay--1').show();
 			})
@@ -24,6 +49,12 @@ block script
 			})
 			$('.dialog__close.2').click(function(){
 				$('#overlay--2').hide();
+			})
+			$('#mart').click(function(){
+				$('#overlay--3').show();
+			})
+			$('.dialog__close.3').click(function(){
+				$('#overlay--3').hide();
 			})
 		});
 
@@ -42,18 +73,17 @@ block content
 								a(href="http://citaone.logo-net.co.uk/chat18/")
 									.dl--circle
 										.pic.i-brand &#xe92a;
-									div as an
+									p as an
 										br
 										strong Adviser
 							.dl--segment.col-xs-6
 								a(href="http://citaone.logo-net.co.uk/chat18/Chat.php?w=250")
 									.dl--circle
 										.pic.i-brand &#xe92a;
-									div as a
+									p as a
 										br
 										strong Client
 
-	.digital-lab
 		#overlay--2.overlay(style="display: none;")
 			.overlay__modal
 				.overlay__main(style="background-color: #c2bdde;")
@@ -67,16 +97,40 @@ block content
 								a(href="http://www.surveygizmo.com/s3/2993823/Citizens-Advice")
 									.dl--circle
 										.pic.i-brand &#xe993;
-									div help with
+									p help with
 										br
 										strong Navigation research
 							.dl--segment.col-xs-6
 								a(href="https://www.citizensadvice.org.uk/development/workplace-rights/sick-pay/check-if-youre-entitled-to-sick-pay/")
 									.dl--circle
 										.pic.i-brand &#xe993;
-									div test
+									p test
 										br
 										strong Sick pay adviser content
+
+		#overlay--3.overlay(style="display: none;")
+			.overlay__modal
+				.overlay__main(style="background-color: #c2bdde;")
+					div
+						button.dialog__close.3(type="button" data-action="close")
+							i(aria-hidden="true", class="dialog__close-icon")
+							span.dialog__close-text Close
+					.flex-container
+						.flex-row
+							.dl--segment.col-xs-6
+								a(href="http://52.209.108.49/client/budgets/1")
+									.dl--circle
+										.pic £
+									p Try the
+										br
+										strong Money advice recording tool (MART)
+							.dl--segment.col-xs-6
+								a(href="http://mart-help.citizensadvice.org.uk/")
+									.dl--circle
+										.pic £
+									p Find out more
+										br
+										strong about Mart
 
 		.fullwidth
 			.fullwidth-content
@@ -111,7 +165,7 @@ block content
 									br
 									strong Webchat
 						.dl--segment.col-sm-4.tablet
-							a(href="#")
+							a#pqf
 								.dl--circle
 									.pic.i-brand &#xe94b;
 								p Explore the
@@ -147,7 +201,7 @@ block content
 									br
 									strong Priority service register
 						.dl--segment.col-sm-4.tablet
-							a(href="http://52.209.108.49/client/budgets/1")
+							a#mart(href="#")
 								.dl--circle
 									.pic £
 								p Try the
