dev:change: Changed to old site mockups

--- a/libs/jade/dev/debt-calculator/debt-calculator-2.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-2.jade
@@ -1,10 +1,11 @@
 block settings
-	- var title = "Debt calculator"
+	- var title = "Repayment calculator for non-priority debts"
 	- var sidebar = true
 	- var toolbars = true
+	- var mockup = true
 	- var dir = "../../"
 
-extends /template/template-site.jade
+extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
