--- a/libs/jade/dev/debt-calculator/debt-calculator-3.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-3.jade
@@ -1,10 +1,11 @@
 block settings
-	- var title = "Debt calculator"
+	- var title = "Repayment calculator for non-priority debts"
 	- var sidebar = true
 	- var toolbars = true
+	- var mockup = true
 	- var dir = "../../"
 
-extends /template/template-site.jade
+extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
@@ -30,7 +31,7 @@ block content
 			thead
 				tr
 					th(scope="col", width="50%") Creditor
-					th(scope="col", width="50%") Suggested monthly repayments
+					th(scope="col", width="50%") Hhow much you should offer
 			tbody
 				tr
 					td Creditor one
