dev:change: Added new mockup content

--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -64,10 +64,16 @@ block content
 			li you don&rsquo;t receive a decision letter within 8 weeks of making your complaint
 		p The ombudsman is independent and will review your complaint further. They might be able to force your supplier to change their decision.
 		h2#h-get-help-with-your-complaint.js-ref Get help with your complaint
-		p The Citizens Advice consumer helpline can give you advice about complaining to your supplier.
+		p The #[a Citizens Advice consumer helpline] can give you advice about how to complain to your supplier. You can contact the helpline on the phone, online or in writing.
 
-		h2 Make a complaint
-		p Using the tool below you will be able to create a letter to your energy supplier, and track its outcome. This tool is created in collaboration with Resolver.
+		h2 Complain in writing
+		p If you’d prefer to write directly to your supplier, this tool by Resolver helps you to create the most effective letter.
+		p The Resolver tool also:
+		ul
+			li makes sure your complaint gets to the right person
+			li tracks the result so you know what’s happening
+			li resends your letter to someone more senior if necessary
+
 		.well--outline
 			label Select your energy supplier
 			.dropdown
