dev:change: Added new mockup content

--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -75,7 +75,7 @@ block content
 			li resends your letter to someone more senior if necessary
 
 		.well--outline
-			label Select your energy supplier
+			label Choose your energy supplier
 			.dropdown
 				select
 					option(value="") Please select
@@ -128,5 +128,5 @@ block content
 					option(value="Telecom Plus") Telecom Plus
 					option(value="Tonik Energy") Tonik Energy
 					option(value="Utilita") Utilita
-			button.btn.right-button-icon Begin a complaint
+			button.btn.right-button-icon Write your complain
 			//img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
