dev: fixed typo

--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -128,5 +128,5 @@ block content
 					option(value="Telecom Plus") Telecom Plus
 					option(value="Tonik Energy") Tonik Energy
 					option(value="Utilita") Utilita
-			button.btn.right-button-icon Write your complain
+			button.btn.right-button-icon Write your complaint
 			//img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
