--- a/libs/modules/template-letter.less
+++ b/libs/modules/template-letter.less
@@ -13,6 +13,24 @@
         content: @i-down;
     }
 }
+.sec--toggle {
+    cursor: pointer;
+    position: relative;
+    &:after {
+        position: absolute;
+        right: 0rem;
+        top: .2rem;
+        .icon;
+        content: @i-up;
+    }
+    &.sec--hidden {
+        margin-bottom: 0;
+        &:after {
+            .icon;
+            content: @i-down;
+        }
+    }
+}
 
 .tl--id {
     input {
@@ -42,4 +60,19 @@
 .tl--option--delete {
     font-size: @font-size-small;
     right: 1rem;
+}
+
+.moveme {
+    position: relative;
+    &:before {
+        cursor: grab;
+        background: none;
+        .icon;
+        content: @i-vertical-dots;
+        position: absolute;
+        left: -1rem;
+        top: 50%;
+        margin-top: -.5rem;
+        display: block;
+    }
 }
