dev: Added 10 PQF links

--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -12,30 +12,30 @@ block head
 
 block script
 	script.
-		var filename = window.location.search.slice(2);;
+		var filename = window.location.search.slice(1);
 		$(document).ready(function() {
 			if (filename == "0") {
-				$('#pqf').attr("href", "http://1")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1X9lN8nJVE-TUtJE3WnstxZBejwg2knTesbRwGdwQJgk")
 			} else if (filename == "1") {
-				$('#pqf').attr("href", "http://2")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1gUKnWCGg617VeQKJg14pFqP2FY71f1Zev9U5m4r3Hs0")
 			} else if (filename == "2") {
-				$('#pqf').attr("href", "http://3")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1X_HDtTT6nTmgfJHu_v4MF4cM3zG5A_z-M2trGWcQeDs")
 			} else if (filename == "3") {
-				$('#pqf').attr("href", "http://4")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1B_gfCfO3fwyrohLv4M9Q2WmqV-6YZ5GiN4oraZlBhZA")
 			} else if (filename == "4") {
-				$('#pqf').attr("href", "http://5")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1tTLHJl_oRDZgyWpu5Jw-er6sDVG5NrqKZ3WLOSzLokw")
 			} else if (filename == "5") {
-				$('#pqf').attr("href", "http://6")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1xSNYVpFISuRqtEPDog995K_6UHGY5CmEAto4UZ0zv80")
 			} else if (filename == "6") {
-				$('#pqf').attr("href", "http://7")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1W9h-ktZBQXB3k5HZpF2atCkuWSbMRaCbGG27ZHWF68o")
 			} else if (filename == "7") {
-				$('#pqf').attr("href", "http://8")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1zQaLlUN9dpGDXSHwsncjZWD6NLX09SsuEUbmWkT_foo")
 			} else if (filename == "8") {
-				$('#pqf').attr("href", "http://9")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1bDnRjdRzxTiAesjxkTt9fkjYozGaVQFSQJrVLViukXM")
 			} else if (filename == "9") {
-				$('#pqf').attr("href", "http://10")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1ED7X6ZQDEUKwen9dAlO-r66ZPKcfQA4Wh_8Le0Mx3m0")
 			} else {
-				$('#pqf').attr("href", "http://1")
+				$('#pqf').attr("href", "https://drive.google.com/open?id=1X9lN8nJVE-TUtJE3WnstxZBejwg2knTesbRwGdwQJgk")
 			}
 
 			$('#webchat').click(function(){
