dev: added more links

--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -228,10 +228,10 @@ block content
 					.flex-row
 						.col-sm-6
 							p
-								a(href="#") Sign up to help with more testing
+								a(href="https://docs.google.com/forms/d/e/1FAIpQLSesGiO2f7l9uMFbQPxuUjZ8RStKFPusfDap_ZV4-8u3Cg6tyw/viewform?usp=send_form") Sign up to help with more testing
 						.col-sm-6
 							p
-								a(href="#") Tell us what you think about the tools
+								a(href="http://fluidsurveys.com/surveys/citizensadvice/digital-lab-feedback-survey-sept-2016/") Tell us what you think about the tools
 
 				p.mobile
 					a(href="https://docs.google.com/forms/d/e/1FAIpQLSesGiO2f7l9uMFbQPxuUjZ8RStKFPusfDap_ZV4-8u3Cg6tyw/viewform?usp=send_form") Sign up to help with more testing
