dev: update psr journey and minor content changes

--- a/libs/jade/dev/psr/step1.jade
+++ b/libs/jade/dev/psr/step1.jade
@@ -16,11 +16,12 @@ block breadcrumbs
 block content
     .articleContent
         div
-            p If you sign up to your supplier’s Priority Services Register (PSR), you can get extra help and support with your energy supply.
-            p You can sign up if you’re:
+            p If register for priority services, you can get extra help and support with your energy and water supply.
+            p You can sign up for services if you:
             ul
-                li a pensioner
-                li disabled or chronically sick
+                li are a pensioner
+                li have a disability or serious illness
                 li have a hearing or visual impairment
+                li have young children
 
             a.btn.right-button-icon(href="step2.html") Start
