--- a/libs/jade/dev/psr/step2a.jade
+++ b/libs/jade/dev/psr/step2a.jade
@@ -10,17 +10,20 @@ extends /template/template.jade
 block script
     script.
 
-        /*$(document).ready(function() {
+        function myFunction() {
+            alert("This feature doesn't work just yet.");
+        }
 
-            // Check state of radio button and showOrHide additional fields
-            $('input[name="conditional-two"]').bind('change',function(){
-                var showOrHide = ($(this).val() == 1) ? true : false;
-                $('#1').toggle(showOrHide);
-                var showOrHide = ($(this).val() == 2) ? true : false;
-                $('#2').toggle(showOrHide);
+        $(document).ready(function() {
+            $('.conditional').click(function() {
+                if( $(this).find('input[value="2"]').is(':checked')) {
+                    $(this).next().show();
+                } else {
+                    $(this).next().hide();
+                }
             });
+        });
 
-        });*/
 
 
 block breadcrumbs
@@ -33,9 +36,9 @@ block content
     .articleContent
         h2 About your energy
         div
-            h3 Confirm your energy suppliers
+            h3 Confirm your suppliers
             .fieldset
-                label(for="energySupplier") Water company
+                label(for="energySupplier") Your water supplier
                 .dropdown
                     select#energySupplier 
                         option Thames Water
@@ -44,6 +47,45 @@ block content
                         option South West Water
 
             .fieldset
+                label(for="energySupplier") Your electricity distributor
+                .dropdown
+                    select#energySupplier 
+                        option Better Energy
+                        option Bristol Energy
+                        option British Gas
+                        option Cooperative Energy
+                        option E Electricity and Gas
+                        option Ebico
+                        option Economy Energy
+                        option Ecotricity
+                        option EDF Energy
+                        option EON
+                        option Extra Energy
+                        option First Utility
+                        option Flow Energy
+                        option GB Energy
+                        option Good Energy
+                        option Green Star Energy
+                        option Npower
+                        option Octopus Energy
+                        option Ovo Energy
+                        option Robin Hood Energy
+                        option ScottishPower
+                        option Spark Energy
+                        option SSE
+                        option Utilita
+                        option Utility Warehouse
+
+            fieldset.conditional
+                label(for="conditional-two") Is your energy supplier different to the distributor?
+                label.radio.radio--block
+                    input(checked, name="conditional-two", type="radio", value="1")
+                    | Same as above
+                label.radio.radio--block
+                    input(name="conditional-two", type="radio", value="2")
+                    | Different 
+            .conditional--fields
+                .fieldset
                 label(for="energySupplier") Electricity supplier
                 .dropdown
                     select#energySupplier 
@@ -72,37 +114,39 @@ block content
                         option SSE
                         option Utilita
                         option Utility Warehouse
+                div
+                    p
 
-            .fieldset
-                label(for="energySupplier") Gas supplier
-                .dropdown
-                    select#energySupplier 
-                        option Not applicable
-                        option Better Energy
-                        option Bristol Energy
-                        option British Gas
-                        option Cooperative Energy
-                        option E Electricity and Gas
-                        option Ebico
-                        option Economy Energy
-                        option Ecotricity
-                        option EDF Energy
-                        option EON
-                        option Extra Energy
-                        option First Utility
-                        option Flow Energy
-                        option GB Energy
-                        option Good Energy
-                        option Green Star Energy
-                        option Npower
-                        option Octopus Energy
-                        option Ovo Energy
-                        option Robin Hood Energy
-                        option ScottishPower
-                        option Spark Energy
-                        option SSE
-                        option Utilita
-                        option Utility Warehouse
+                .fieldset
+                    label(for="energySupplier") Gas supplier
+                    .dropdown
+                        select#energySupplier 
+                            //option Not applicable
+                            option Better Energy
+                            option Bristol Energy
+                            option British Gas
+                            option Cooperative Energy
+                            option E Electricity and Gas
+                            option Ebico
+                            option Economy Energy
+                            option Ecotricity
+                            option EDF Energy
+                            option EON
+                            option Extra Energy
+                            option First Utility
+                            option Flow Energy
+                            option GB Energy
+                            option Good Energy
+                            option Green Star Energy
+                            option Npower
+                            option Octopus Energy
+                            option Ovo Energy
+                            option Robin Hood Energy
+                            option ScottishPower
+                            option Spark Energy
+                            option SSE
+                            option Utilita
+                            option Utility Warehouse
 
 
         a.btn-light.left-button-icon(href="step2.html") Back
