--- a/libs/jade/dev/psr/step3.jade
+++ b/libs/jade/dev/psr/step3.jade
@@ -23,29 +23,35 @@ block content
                     legend(for="checkbox-inline") Please select all that apply to you
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I'm of pension age
+                    | Pensionable age
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I have a disability 
+                    | Disabled 
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I'm chronically sick
+                    | Serious illness
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I have special communication needs 
+                    | Special communication needs 
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I'm dependent on electricity for medical reasons 
+                    | Dependent on electricity for medical reasons 
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I'm blind, partially sighted 
+                    | Blind or partially sighted 
                 label.checkbox.checkbox--block
                     input(name="checkbox-inline", type="checkbox")
-                    | I'm deaf, hearing impaired
+                    | Deaf or hearing impaired
+                label.checkbox.checkbox--block
+                    input(name="checkbox-inline", type="checkbox")
+                    | Children under 5 years old
+                label.checkbox.checkbox--block
+                    input(name="checkbox-inline", type="checkbox")
+                    | Mental health issues
 
                 fieldset
-                    label(for="yourAddress") Any other, please give details
+                    label(for="yourAddress") Please give details of any of the above issues or any additional needs
                     textarea#yourAddress(rows="4")
 
         a.btn-light.left-button-icon(href="step2.html") Back
-        a.btn.right-button-icon(href="step3a.html") Continue
+        a.btn.right-button-icon(href="step5.html") Continue
