--- a/libs/jade/dev/psr/step7.jade
+++ b/libs/jade/dev/psr/step7.jade
@@ -17,9 +17,10 @@ block content
     .articleContent
         .callout--confirmation
             h2 Completed
-            p Your form has been submitted to the following companies.
-            h4 #[a(href="#") Better Energy]
-            h4 #[a(href="#") Thames Water]
+            p A confirmation email has been sent to you and your form has been submitted to the following companies.
+            h4 #[a(href="#") Thames Water] – your water supplier
+            h4 #[a(href="#") Better Energy] – your electricity distributor
+            h4 #[a(href="#") Cooperative Energy] – your electricity supplier            
 
         .callout--related
             h3 What happens next
