--- a/libs/jade/dev/psr/step5.jade
+++ b/libs/jade/dev/psr/step5.jade
@@ -115,5 +115,5 @@ block content
                     | No
 
 
-        a.btn-light.left-button-icon(href="step4.html") Back
+        a.btn-light.left-button-icon(href="step3a.html") Back
         a.btn.right-button-icon(href="step6.html") Continue
