dev: Testing movable divs

--- a/libs/modules/template-letter.less
+++ b/libs/modules/template-letter.less
@@ -13,10 +13,12 @@
         content: @i-down;
     }
 }
+
 .sec--toggle {
     cursor: pointer;
     position: relative;
     &:after {
+        color: @heritage-blue;
         position: absolute;
         right: 0rem;
         top: .2rem;
@@ -65,6 +67,7 @@
 .moveme {
     position: relative;
     &:before {
+        color: @gray-3;
         cursor: grab;
         background: none;
         .icon;
