dev: update content on psr tool

--- a/libs/jade/dev/psr/step1.jade
+++ b/libs/jade/dev/psr/step1.jade
@@ -16,7 +16,7 @@ block breadcrumbs
 block content
     .articleContent
         div
-            p If register for priority services, you can get extra help and support with your energy and water supply.
+            p If you register for priority services, you can get extra help and support with your energy and water supply.
             p You can sign up for services if you:
             ul
                 li are a pensioner
