--- a/libs/jade/dev/psr/step5.jade
+++ b/libs/jade/dev/psr/step5.jade
@@ -30,7 +30,7 @@ block content
                     | No
 
         .well--outline
-            h2 Advanced notice of planned power cuts
+            h2 Advance notice of planned power cuts
             p Advance notice of planned power cuts for customers who depend on their energy supply for medical reasons.
             fieldset
                 legend(for="radio2") Would you like advanced notice of planned power cuts?
@@ -79,7 +79,7 @@ block content
 
         .well--outline
             h2 Prepayment meters
-            p If a customer is unable reach to their prepayment meter they can asked for it to be moved.
+            p If a customer is unable to reach their prepayment meter they can asked for it to be moved.
 
              fieldset
                 legend(for="radio6") Would you like a prepayment meter?
