--- a/libs/jade/dev/psr/step6.jade
+++ b/libs/jade/dev/psr/step6.jade
@@ -19,7 +19,7 @@ block content
         p You've selected to receive the following prioritised services.
         ul
             li Accessible bills
-            li Advanced notice of planned power cuts
+            li Advance notice of planned power cuts
             li Priority in an emergency
             li Bill nominee scheme
             li Annual gas appliance safety checks for homeowners
