dev:fix: Fixing minor syntax issues that were giving compile warnings

--- a/libs/jade/dev/DLA/before-you-claim/check-if-you-can-get.jade
+++ b/libs/jade/dev/DLA/before-you-claim/check-if-you-can-get.jade
@@ -24,28 +24,25 @@ block sidebar
 		0)
 
 block content
-	.articleContent 
-		p  It’s very common for a parent to think they won’t be able to get Disability Living Allowance (DLA) for their child when they can.
+	.articleContent
+		p It’s very common for a parent to think they won’t be able to get Disability Living Allowance (DLA) for their child when they can.
 		p DLA isn’t just for children who are physically disabled. It can be given for a wide range of medical conditions including behavioural and mental health conditions as well as learning disabilities and developmental delay. You might be able to claim even if you wouldn’t describe your child as ‘disabled’.
 		p You can get DLA if your child:
 		ul
-			li  needs more care, attention or supervision than a child of the same age who isn't disabled, or
+			li needs more care, attention or supervision than a child of the same age who isn't disabled, or
 			li has difficulty walking or getting around outdoors in unfamiliar places
 		p Your child needs to be under 16 for you to claim DLA - if they're 16 or over you'll have to #[a(href="/benefits/sick-or-disabled-people-and-carers/pip/") claim Personal Independence Payment].
 		p Your child must have have been disabled or had the condition for at least 3 months, and you must expect it to last for 6 more. You don’t need a formal diagnosis from a doctor to apply, but this can usually help.
-		p If your child is terminally ill and not expected to live more than 6 months, you can apply right away regardless of how long your child has had difficulties for. 
-			#[a(href='/development/disability-living-allowance/help-with-your-dla-claim/claiming-dla-terminally-ill/') Read more about applying for a terminally ill child].
+		p If your child is terminally ill and not expected to live more than 6 months, you can apply right away regardless of how long your child has had difficulties for. #[a(href='/development/disability-living-allowance/help-with-your-dla-claim/claiming-dla-terminally-ill/') Read more about applying for a terminally ill child].
 		h2#h-your-earnings-and-other-benefits.js-ref Your earnings and other benefits
 		p DLA isn’t means tested, so it doesn’t matter how much you earn or how much money you might have in savings.
 		p Any other benefits you might be getting won’t be affected. In fact, getting DLA could mean that:
 		ul
 			li you can get other benefits, or
 			li you can get a higher rate of the benefits that you currently get 
-		p Read more about 
-			#[a(href='/development/disability-living-allowance/help-with-your-dla-claim/disability-living-allowance-dla-extra-money-and-benefits-you-can-get/') extra help and support if you’re getting DLA].
+		p Read more about #[a(href='/development/disability-living-allowance/help-with-your-dla-claim/disability-living-allowance-dla-extra-money-and-benefits-you-can-get/') extra help and support if you’re getting DLA].
 		h2#h-get-help-and-support.js-ref Get help and support
-		p You can 
-			#[a(href='/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/') talk to your nearest Citizens Advice] for help understanding if you can claim DLA. You can also talk to a specialist at the ‘Contact a family’ charity - they're experts in DLA for children.
+		p You can #[a(href='/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/') talk to your nearest Citizens Advice] for help understanding if you can claim DLA. You can also talk to a specialist at the ‘Contact a family’ charity - they're experts in DLA for children.
 		p
 			strong Contact a Family helpline
 			br
@@ -101,8 +98,6 @@ block content
 		.callout--related
 			h2#h-next-steps.js-ref Next steps
 			p
-			a(href='/development/disability-living-allowance/before-you-claim-dla/claiming-dla/') How much DLA you can get
-			| .
+				a(href='/development/disability-living-allowance/before-you-claim-dla/claiming-dla/') How much DLA you can get.
 			p
-			a(href='/development/disability-living-allowance/help-with-your-dla-claim/how-to-claim-dla/') How to claim DLA
-			| .
+				a(href='/development/disability-living-allowance/help-with-your-dla-claim/how-to-claim-dla/') How to claim DLA.
