--- a/libs/jade/dev/DLA/claiming-DLA/claiming-DLA-terminally-ill.jade
+++ b/libs/jade/dev/DLA/claiming-DLA/claiming-DLA-terminally-ill.jade
@@ -46,9 +46,9 @@ block content
 		p
 			strong Disability Living Allowance helpline
 			br
-			| Telephone: 0345 712 3456 
+			| Telephone: 0345 712 3456
 			br
-			| Textphone: 0345 722 4433 
+			| Textphone: 0345 722 4433
 			br
 			| Monday to Friday, 8am to 6pm
 			br
@@ -76,9 +76,9 @@ block content
 		p
 			strong Disability Living Allowance helpline
 			br
-			| Telephone: 0345 712 3456 
+			| Telephone: 0345 712 3456
 			br
-			| Textphone: 0345 722 4433 
+			| Textphone: 0345 722 4433
 			br
 			| Monday to Friday, 8am to 6pm
 		p Calls cost up to 12p a minute from a landline, and between 3p and 45p a minute from a mobile.
@@ -87,8 +87,7 @@ block content
 		h2#h-see-what-other-benefits-you-could-get.js-ref See what other benefits you could get
 		p Claiming DLA can also increase your eligibility for other help and benefits. #[a(href='/development/disability-living-allowance/help-with-your-dla-claim/disability-living-allowance-dla-extra-money-and-benefits-you-can-get/') Read about the other benefits you might be able to claim].
 		h2#h-get-help-and-support.js-ref Get help and support
-		p You can talk to an adviser at your  
-			#[a(href='/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/') nearest Citizens Advice] or call the free helpline provided by the ‘Contact a Family’ charity if you feel like you need help. They’re specialists who can give you support and answer questions you have about eligibility, claiming, residence requirements or anything else.
+		p You can talk to an adviser at your #[a(href='/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/') nearest Citizens Advice] or call the free helpline provided by the ‘Contact a Family’ charity if you feel like you need help. They’re specialists who can give you support and answer questions you have about eligibility, claiming, residence requirements or anything else.
 		p
 			strong Contact a Family helpline
 			br
