--- a/libs/jade/dev/site/home.jade
+++ b/libs/jade/dev/site/home.jade
@@ -15,7 +15,7 @@ block content
 						h1 Welcome to Citizens Advice
 						p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
 						//.home__content-trends
-							h2 Most viewed 
+							h2 Most viewed
 							p #[a(href="#") Employment Support Allowance ]
 							p #[a(href="#") Personal Independence Payment ]
 							p #[a(href="#") Basic rights at work ]
@@ -28,7 +28,7 @@ block content
 		.home-second
 			.home__content
 				.flex-container.flex-row
-					div.col-sm-4.col-sm-12								
+					div.col-sm-4.col-sm-12
 						.cards.cards--basic
 							.blog-lead
 								.blog-name
@@ -40,14 +40,16 @@ block content
 								p employment issues in 2015
 								h3 84%
 								p increase in unauthorised deduction from wages
-								p #[a(href="#") Read more about our research ]		
+								p
+									a(href="#") Read more about our research
 
 					div.col-sm-4.col-sm-12
 						.cards.cards--basic
 							.blog-lead
 								.blog-name
 									p Latest Blog
-									h3 #[a(href="#") Payday loans: An improved market? ]
+									h3
+										a(href="#") Payday loans: An improved market?
 								img(src="../../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
 								p Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
 
