dev: minor text change debt calculator

--- a/libs/jade/dev/debt-calculator/debt-calculator-3.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-3.jade
@@ -31,7 +31,7 @@ block content
 			thead
 				tr
 					th(scope="col", width="50%") Creditor
-					th(scope="col", width="50%") Hhow much you should offer
+					th(scope="col", width="50%") How much you should offer
 			tbody
 				tr
 					td Creditor one
