dev:fix: Changed back button to the lighter button

--- a/libs/jade/dev/debt-calculator/debt-calculator-2.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-2.jade
@@ -41,5 +41,5 @@ block content
 					input#standardField(placeholder="", type="text")
 		button#add-debt.btn-secondary.plus-button-icon Add another debt
 		p
-		a.btn.left-button-icon(href="debt-calculator.html") Back
+		a.btn-light.left-button-icon(href="debt-calculator.html") Back
 		a.btn.right-button-icon(href="debt-calculator-3.html") Finish
