dev:fix: Added £ placeholder

--- a/libs/jade/dev/debt-calculator/debt-calculator.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator.jade
@@ -31,7 +31,7 @@ block content
 		.fieldset
 			label(for="field") Money left after essential bills and living costs
 			.field-group.field-group--dropdown
-				input#field(type="number")
+				input#field(type="number", placeholder="£")
 				.dropdown
 					select#exampleSelect1
 						option Weekly
