dev:fix: Changed restart to blue button

--- a/libs/jade/dev/debt-calculator/debt-calculator-3.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-3.jade
@@ -40,4 +40,4 @@ block content
 					td Creditor two
 					td £XX.XX
 
-		a.btn.restart-button-icon(href="debt-calculator.html") Restart
+		a.btn-secondary.restart-button-icon(href="debt-calculator.html") Restart
